--- a/app/src/main/res/layout/frag_playback_controller.xml
+++ b/app/src/main/res/layout/frag_playback_controller.xml
@@ -2,8 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:gravity="center_horizontal"
+    android:gravity="center_vertical"
     android:layout_height="wrap_content"
+    android:background="@color/colorPrimary"
     android:orientation="horizontal">
 
     <ImageView
@@ -25,8 +26,10 @@
         <TextView
             android:id="@+id/tv_title"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:ellipsize="end"
+            android:gravity="center_vertical"
             android:maxLines="1"
             android:padding="2dp"
             tools:text="标题" />
@@ -34,7 +37,9 @@
         <TextView
             android:id="@+id/tv_artist"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
             android:maxLines="1"
             android:padding="2dp"
             android:textSize="10sp"
