--- a/app/src/main/res/layout/frag_playback_controller.xml
+++ b/app/src/main/res/layout/frag_playback_controller.xml
@@ -2,60 +2,80 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:gravity="center_vertical"
     android:layout_height="wrap_content"
-    android:background="@color/colorPrimary"
-    android:orientation="horizontal">
+    android:orientation="vertical"
+    android:background="@color/colorAccent"
+   >
 
-    <ImageView
-        android:id="@+id/iv_thumb"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:layout_margin="2dp"
-        android:src="@mipmap/ic_launcher_round" />
+
+    <ProgressBar
+        android:id="@+id/pb_progress"
+        android:background="#ffffffff"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="1dp" />
 
     <LinearLayout
-        android:id="@+id/ll_music_info"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:layout_margin="2dp"
-        android:layout_toRightOf="@id/iv_thumb"
-        android:orientation="vertical">
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        >
+        <ImageView
+            android:id="@+id/iv_thumb"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_margin="2dp"
+            android:src="@mipmap/ic_launcher_round" />
 
-        <TextView
-            android:id="@+id/tv_title"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+        <LinearLayout
+            android:id="@+id/ll_music_info"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:ellipsize="end"
-            android:gravity="center_vertical"
-            android:maxLines="1"
-            android:padding="2dp"
-            tools:text="标题" />
+            android:layout_margin="2dp"
+            android:layout_toRightOf="@id/iv_thumb"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tv_artist"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:gravity="center_vertical"
-            android:maxLines="1"
-            android:padding="2dp"
-            android:textSize="10sp"
-            tools:text="歌手" />
+            <TextView
+                android:id="@+id/tv_title"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:ellipsize="end"
+                android:gravity="center_vertical"
+                android:textColor="@android:color/white"
+                android:maxLines="1"
+                android:padding="2dp"
+                tools:text="标题" />
+
+            <TextView
+                android:id="@+id/tv_artist"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:textColor="@android:color/white"
+                android:maxLines="1"
+                android:padding="2dp"
+                android:textSize="10sp"
+                tools:text="歌手" />
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/iv_play_or_pause"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/ll_music_info"
+            android:src="@drawable/a_9" />
+
+        <ImageView
+            android:id="@+id/iv_music_list"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/aab" />
+
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/iv_play_or_pause"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/ll_music_info"
-        android:src="@drawable/a_9" />
 
-    <ImageView
-        android:id="@+id/iv_music_list"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/aab" />
 </LinearLayout>
