--- a/app/src/main/res/layout/frag_main.xml
+++ b/app/src/main/res/layout/frag_main.xml
@@ -1,10 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:padding="20dp"
-        android:text="首页"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+  <TextView
+      android:id="@+id/tv_new"
+      android:gravity="center"
+      android:layout_width="match_parent"
+      android:layout_height="0dp"
+      android:text="新歌榜"
+      android:layout_weight="1"/>
+  <TextView
+      android:id="@+id/tv_hot"
+      android:gravity="center"
+      android:layout_width="match_parent"
+      android:layout_height="0dp"
+      android:text="热歌榜"
+      android:layout_weight="1"/>
+  <TextView
+      android:id="@+id/tv_billboard"
+      android:gravity="center"
+      android:text="Billboard榜"
+      android:layout_width="match_parent"
+      android:layout_height="0dp"
+      android:layout_weight="1"/>
+  <TextView
+      android:id="@+id/tv_pop"
+      android:text="Pop榜"
+      android:gravity="center"
+      android:layout_width="match_parent"
+      android:layout_height="0dp"
+      android:layout_weight="1"/>
 </LinearLayout>
